--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,14 @@
 
     <application
         android:icon="@drawable/logo"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/PinCrack" >
         <activity
             android:name=".PinCrackActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,6 +29,10 @@
         </activity>
         <activity
             android:name="ResultActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="ViewLogsActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
