--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pincrack"
+    package="com.pincrack"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.2" >
 
     <uses-sdk android:minSdkVersion="7" />
 
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/PinCrack" >
         <activity
-            android:name=".PinCrackActivity"
+            android:name="pincrack.PinCrackActivity"
             android:label="@string/app_name" 
             android:clearTaskOnLaunch="true">
             <intent-filter>
@@ -20,19 +20,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="DataActivity"
+            android:name="pincrack.DataActivity"
             android:label="@string/app_name" >
         </activity>        
         <activity
-            android:name="InputActivity"
+            android:name="pincrack.InputActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="ResultActivity"
+            android:name="pincrack.ResultActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="ViewLogsActivity"
+            android:name="pincrack.ViewLogsActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
