--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,23 +6,28 @@
 
     <uses-sdk android:minSdkVersion="16" />
 
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.pincrack" />
+
     <application
         android:icon="@drawable/logo_v2"
         android:label="@string/app_name"
         android:theme="@style/PinCrack" >
         <activity
             android:name="pincrack.PinCrackActivity"
-            android:label="@string/app_name" 
-            android:clearTaskOnLaunch="true">
+            android:clearTaskOnLaunch="true"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="pincrack.DataActivity"
             android:label="@string/app_name" >
-        </activity>        
+        </activity>
         <activity
             android:name="pincrack.InputActivity"
             android:label="@string/app_name" >
@@ -35,6 +40,8 @@
             android:name="pincrack.ViewLogsActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <uses-library android:name="android.test.runner" />
     </application>
 
 </manifest>
